--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.1",
     "mini-css-extract-plugin": "^2.1.0",
     "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.4",
@@ -63,6 +65,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "ts-lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-    "ts-fix": "npx eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "ts-fix": "npx eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "prepare": "husky install",
+    "pretty": "pretty-quick"
   }
 }
