--- a/package.json
+++ b/package.json
@@ -58,11 +58,12 @@
     "ts-loader": "^9.2.4",
     "typescript": "^4.3.5",
     "webpack": "^5.47.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && webpack --mode development",
+    "build": "rm -rf dist && webpack --mode development --config webpack.config.ts",
     "dev": "nodemon app.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
