--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,13 @@ dist
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# terraform
+/terraform/.terraform
+/terraform/.terraform.lock.hcl
+/terraform/.terraform.lock.hcl
+/terraform/terraform.tfstate*
+/terraform/terraform.tfvars
+
+# storybook
+# /storybookDist
