--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "build": "rm -rf dist && webpack --mode development --config webpack.config.ts",
     "dev": "nodemon app.js",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "build-storybook": "build-storybook -o storybookDist",
     "ts-lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "ts-fix": "npx eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "prepare": "husky install",
