--- a/package.json
+++ b/package.json
@@ -14,35 +14,35 @@
   },
   "homepage": "https://github.com/namliw/humds#readme",
   "dependencies": {
-    "@storybook/builder-webpack5": "^6.3.5",
+    "@storybook/builder-webpack5": "^6.3.7",
     "@vanilla-extract/babel-plugin": "^1.0.1",
-    "@vanilla-extract/css": "^1.1.2",
-    "@vanilla-extract/webpack-plugin": "^1.0.3",
+    "@vanilla-extract/css": "^1.2.3",
+    "@vanilla-extract/webpack-plugin": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/core": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
-    "@storybook/addon-actions": "^6.3.6",
-    "@storybook/addon-essentials": "^6.3.6",
-    "@storybook/addon-links": "^6.3.6",
-    "@storybook/manager-webpack5": "^6.3.5",
-    "@storybook/react": "^6.3.6",
-    "@types/mini-css-extract-plugin": "^2.0.1",
-    "@types/react": "^17.0.15",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/manager-webpack5": "^6.3.7",
+    "@storybook/react": "^6.3.7",
+    "@types/mini-css-extract-plugin": "^2.2.0",
+    "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "babel-loader": "^8.2.2",
-    "chromatic": "^5.10.0-canary.0",
+    "chromatic": "^5.10.0-next.0",
     "css-loader": "^6.2.0",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
@@ -50,14 +50,14 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
-    "mini-css-extract-plugin": "^2.1.0",
+    "mini-css-extract-plugin": "^2.2.0",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
-    "ts-loader": "^9.2.4",
+    "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
-    "webpack": "^5.47.0",
+    "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
