--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Build
+        run: yarn install && yarn build-storybook
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
