--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build
-        run: yarn install && yarn build-storybook
+        run: npm install && npm run build-storybook
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
